@@ -1,0 +1,43 @@
+// jsonengine.h
+//
+// JSON update generator
+//
+//   (C) Copyright 2019 Fred Gleason <fredg@paravelsystems.com>
+//
+//   This program is free software; you can redistribute it and/or modify
+//   it under the terms of the GNU General Public License version 2 as
+//   published by the Free Software Foundation.
+//
+//   This program is distributed in the hope that it will be useful,
+//   but WITHOUT ANY WARRANTY; without even the implied warranty of
+//   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+//   GNU General Public License for more details.
+//
+//   You should have received a copy of the GNU General Public
+//   License along with this program; if not, write to the Free Software
+//   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+//
+
+#ifndef JSONENGINE_H
+#define JSONENGINE_H
+
+#include <QMultiMap>
+#include <QString>
+#include <QStringList>
+
+class JsonEngine
+{
+ public:
+  JsonEngine();
+  void addEvent(const QString &str);
+  void addEvents(const QString &str);
+  QString generate() const;
+  void clear();
+  static QString escape(const QString &str);
+
+ private:
+  QMultiMap<QString,QStringList> json_events;
+};
+
+
+#endif  // JSONENGINE_H
